logs/tracking/build.make.872.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp: In member function ‘void FeatureDetector::detectFeatures(std::vector<cv::Mat>)’:
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp:11:27: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for (int i=0; i<pyr.size(); i++) {
                           ^
/home/dexheimere/thesis_ws/src/tracking/src/FeatureDetector.cpp:21:37: error: ‘None’ is not a member of ‘cv’
   cv::drawKeypoints(img, keypoints, cv::None);
                                     ^
make[2]: *** [CMakeFiles/tracking.dir/src/FeatureDetector.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
